// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader change tab 1`] = `
<div>
  <div
    class="nut-overlay"
    style="--nutui-overlay-zIndex: 1000;"
  />
  <div
    class="round nut-popup nut-popup-bottom "
    style="z-index: 1000;"
  >
    <div
      class="nut-cascader "
    >
      <div
        class="nut-tabs nut-tabs--horizontal"
        value="c1"
      >
        <div
          class="nut-tabs__titles nut-tabs__titles--line nut-tabs__titles--scrollable"
        >
          <div
            class="nut-tabs__titles-item nut-tabs__titles-item--active"
          >
            <span
              class="nut-tabs__titles-item__text"
            >
              请选择
            </span>
            <span
              class="nut-tabs__titles-item__line"
            />
          </div>
        </div>
        <div
          class="nut-tabs__content__wrap"
        >
          <div
            class="nut-tabs__content"
            style="transform: translate3d(--100%, 0, 0); transition-duration: 300ms;"
          >
            <div
              class="active nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    浙江
                  </div>
                </div>
                <div
                  class="disabled nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    湖南
                  </div>
                </div>
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    福建
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader change tab 2`] = `
<div>
  <div
    class="nut-overlay"
    style="--nutui-overlay-zIndex: 1000;"
  />
  <div
    class="round nut-popup nut-popup-bottom "
    style="z-index: 1000;"
  >
    <div
      class="nut-cascader "
    >
      <div
        class="nut-tabs nut-tabs--horizontal"
        value="c1"
      >
        <div
          class="nut-tabs__titles nut-tabs__titles--line nut-tabs__titles--scrollable"
        >
          <div
            class="nut-tabs__titles-item nut-tabs__titles-item--active"
          >
            <span
              class="nut-tabs__titles-item__text"
            >
              请选择
            </span>
            <span
              class="nut-tabs__titles-item__line"
            />
          </div>
        </div>
        <div
          class="nut-tabs__content__wrap"
        >
          <div
            class="nut-tabs__content"
            style="transform: translate3d(--100%, 0, 0); transition-duration: 300ms;"
          >
            <div
              class="active nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    浙江
                  </div>
                </div>
                <div
                  class="disabled nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    湖南
                  </div>
                </div>
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    福建
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader options 1`] = `<div />`;

exports[`Cascader options with format 1`] = `<div />`;

exports[`Cascader options with valueKey/textKey/childrenKey 1`] = `<div />`;

exports[`Cascader value 1`] = `<div />`;

exports[`Cascader visible true 1`] = `
<div>
  <div
    class="nut-overlay"
    style="--nutui-overlay-zIndex: 1000;"
  />
  <div
    class="round nut-popup nut-popup-bottom "
    style="z-index: 1000;"
  >
    <div
      class="nut-cascader "
    >
      <div
        class="nut-tabs nut-tabs--horizontal"
        value="c3"
      >
        <div
          class="nut-tabs__titles nut-tabs__titles--line nut-tabs__titles--scrollable"
        >
          <div
            class="nut-tabs__titles-item "
          >
            <span
              class="nut-tabs__titles-item__text"
            >
              福建
            </span>
            <span
              class="nut-tabs__titles-item__line"
            />
          </div>
          <div
            class="nut-tabs__titles-item "
          >
            <span
              class="nut-tabs__titles-item__text"
            >
              福州
            </span>
            <span
              class="nut-tabs__titles-item__line"
            />
          </div>
          <div
            class="nut-tabs__titles-item nut-tabs__titles-item--active"
          >
            <span
              class="nut-tabs__titles-item__text"
            >
              鼓楼区
            </span>
            <span
              class="nut-tabs__titles-item__line"
            />
          </div>
        </div>
        <div
          class="nut-tabs__content__wrap"
        >
          <div
            class="nut-tabs__content"
            style="transform: translate3d(-200%, 0, 0); transition-duration: 300ms;"
          >
            <div
              class="nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    浙江
                  </div>
                </div>
                <div
                  class="disabled nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    湖南
                  </div>
                </div>
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    福建
                  </div>
                  <svg
                    aria-labelledby="Checklist"
                    class="nut-cascader__icon-check nut-icon nut-icon-Checklist"
                    role="presentation"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M159.289 500.622c62.578 0 125.155 17.067 221.867 102.4 8.533 5.69 19.91 5.69 25.6 0 48.355-54.044 238.933-261.689 455.11-329.955 0 0 28.445-5.69 42.667 19.91 8.534 17.067 19.911 34.134-5.689 54.045-22.755 17.067-264.533 179.2-440.888 440.89l-2.845 2.844c-11.378 8.533-68.267 51.2-119.467-14.223-56.888-71.11-85.333-139.377-196.266-196.266-2.845 0-2.845-2.845-5.69-5.69-11.377-11.377-54.044-73.955 25.6-73.955z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    福州
                  </div>
                  <svg
                    aria-labelledby="Checklist"
                    class="nut-cascader__icon-check nut-icon nut-icon-Checklist"
                    role="presentation"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M159.289 500.622c62.578 0 125.155 17.067 221.867 102.4 8.533 5.69 19.91 5.69 25.6 0 48.355-54.044 238.933-261.689 455.11-329.955 0 0 28.445-5.69 42.667 19.91 8.534 17.067 19.911 34.134-5.689 54.045-22.755 17.067-264.533 179.2-440.888 440.89l-2.845 2.844c-11.378 8.533-68.267 51.2-119.467-14.223-56.888-71.11-85.333-139.377-196.266-196.266-2.845 0-2.845-2.845-5.69-5.69-11.377-11.377-54.044-73.955 25.6-73.955z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="active nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    鼓楼区
                  </div>
                  <svg
                    aria-labelledby="Checklist"
                    class="nut-cascader__icon-check nut-icon nut-icon-Checklist"
                    role="presentation"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M159.289 500.622c62.578 0 125.155 17.067 221.867 102.4 8.533 5.69 19.91 5.69 25.6 0 48.355-54.044 238.933-261.689 455.11-329.955 0 0 28.445-5.69 42.667 19.91 8.534 17.067 19.911 34.134-5.689 54.045-22.755 17.067-264.533 179.2-440.888 440.89l-2.845 2.844c-11.378 8.533-68.267 51.2-119.467-14.223-56.888-71.11-85.333-139.377-196.266-196.266-2.845 0-2.845-2.845-5.69-5.69-11.377-11.377-54.044-73.955 25.6-73.955z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item__title"
                  >
                    台江区
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader visible true 2`] = `
<div
  class="active nut-cascader-item"
>
  <div
    class="nut-cascader-item__title"
  >
    鼓楼区
  </div>
  <svg
    aria-labelledby="Checklist"
    class="nut-cascader__icon-check nut-icon nut-icon-Checklist"
    role="presentation"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M159.289 500.622c62.578 0 125.155 17.067 221.867 102.4 8.533 5.69 19.91 5.69 25.6 0 48.355-54.044 238.933-261.689 455.11-329.955 0 0 28.445-5.69 42.667 19.91 8.534 17.067 19.911 34.134-5.689 54.045-22.755 17.067-264.533 179.2-440.888 440.89l-2.845 2.844c-11.378 8.533-68.267 51.2-119.467-14.223-56.888-71.11-85.333-139.377-196.266-196.266-2.845 0-2.845-2.845-5.69-5.69-11.377-11.377-54.044-73.955 25.6-73.955z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
</div>
`;
